# serverless-template

./: README.rst  cookiecutter.json  runtests.sh  tox.ini
.github/workflows/: ci.yml
hooks/: post_gen_project.sh
requirements/: local.txt
{{cookiecutter.project_slug}}/: .coveragerc  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  README.rst  fabfile.py  package-lock.json  package.json  pyproject.toml  pytest.ini  serverless.yml  tox.ini  zappa_settings.yaml
{{cookiecutter.project_slug}}/.github/workflows/: cache.yml  ci.yml
{{cookiecutter.project_slug}}/project/: __init__.py  serverless.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt  testing.txt
{{cookiecutter.project_slug}}/tests/: conftest.py  test_views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: views.py
